freshrss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  namespace: freshrss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      enableServiceLinks: false
      containers:
        - name: freshrss
          image: freshrss/freshrss:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/www/FreshRSS/data
            - name: extensions
              mountPath: /var/www/FreshRSS/extensions
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: freshrss-data
        - name: extensions
          persistentVolumeClaim:
            claimName: freshrss-extensions
